pilot/pkg/security/authz/builder/testdata/http/trust-domains-in.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: httpbin
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
  rules:
    - from:
        - source:
            trustDomains: ["cluster.local", "another.local"]
        - source:
            notTrustDomains: ["bad*", "untrusted"]
